# ros-rad4d-extract

./: CMakeLists.txt  README.md  package.xml
scripts/: extract_img.py  extract_pcd.py
